@@ -590,6 +590,7 @@ visible.</p>
             &lt;tileType&gt;png&lt;/tileType&gt;
             &lt;tileUpdate&gt;None&lt;/tileUpdate&gt;
             &lt;url&gt;http://topo.openstreetmap.de/topo/{$z}/{$x}/{$y}.png&lt;/url&gt;
+            &lt;backgroundColor&gt;#000000&lt;/backgroundColor&gt;
             &lt;backgroundMapSource&gt;
 	            &lt;name&gt;Custom background unique name&lt;/name&gt;
 	            &lt;minZoom&gt;0&lt;/minZoom&gt;
@@ -597,6 +598,7 @@ visible.</p>
 	            &lt;tileType&gt;png&lt;/tileType&gt;
 	            &lt;tileUpdate&gt;None&lt;/tileUpdate&gt;
 	            &lt;url&gt;http://tile.openstreetmap.org/{$z}/{$x}/{$y}.png&lt;/url&gt;
+	            &lt;backgroundColor&gt;#000000&lt;/backgroundColor&gt;
             &lt;/backgroundMapSource&gt;
         &lt;/customMultiLayerMapSource&gt;
     &lt;/customMapSources&gt;
